# catkin_create_qt_pkg

./: README.md  catkin_create_qt_pkg.sh  setup.sh
qt-ros/: CMakeLists.txt  package.xml
qt-ros/include/PACKAGE_NAME/: main_window.hpp  qnode.hpp
qt-ros/src/: main.cpp  main_window.cpp  qnode.cpp
qt-ros/ui/: main_window.ui
